# open-in-colab-workflow

./: pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  workflow_call.yml
docs/: api.rst  conf.py  index.rst
open_in_cloud_workflow/: __init__.py  add_installation_cells.py  get_colab_drive_url.py  get_colab_github_url.py  get_drive_url.py  get_fem_on_cloud_installation_cell_code.py  get_fem_on_cloud_installation_line.py  get_fem_on_colab_installation_cell_code.py  get_fem_on_colab_installation_line.py  get_git_head_hash.py  get_kaggle_drive_url.py  get_kaggle_github_url.py  get_pip_installation_cell_code.py  get_pip_installation_line.py  get_rclone_env.py  glob_files.py  glob_images.py  glob_links.py  hardcode_environment_variable.py  packages_str_to_lists.py  publish_on.py  replace_images_in_markdown.py  replace_links_in_markdown.py  upload_files_to_google_drive.py
open_in_colab_workflow/: __init__.py  add_installation_cells.py  get_colab_drive_url.py  get_drive_url.py  get_fem_on_colab_installation_cell_code.py  get_fem_on_colab_installation_line.py  get_git_head_hash.py  get_kaggle_drive_url.py  get_pip_installation_cell_code.py  get_pip_installation_line.py  get_rclone_env.py  glob_files.py  glob_images.py  glob_links.py  glob_notebooks.py  packages_str_to_lists.py  publish_on.py  replace_images_in_markdown.py  replace_links_in_markdown.py  upload_files_to_google_drive.py
tests/: conftest.py  test_add_installation_cells.py  test_get_colab_drive_url.py  test_get_colab_github_url.py  test_get_drive_url.py  test_get_fem_on_cloud_installation_cell_code.py  test_get_fem_on_cloud_installation_line.py  test_get_fem_on_colab_installation_cell_code.py  test_get_fem_on_colab_installation_line.py  test_get_git_head_hash.py  test_get_kaggle_drive_url.py  test_get_kaggle_github_url.py  test_get_pip_installation_cell_code.py  test_get_pip_installation_line.py  test_glob_files.py  test_glob_images.py  test_glob_links.py  test_glob_notebooks.py  test_hardcode_environment_variable.py  test_packages_str_to_lists.py  test_publish_on.py  test_replace_images_in_markdown.py  test_replace_links_in_markdown.py  test_upload_files_to_google_drive.py
tests/data/add_installation_cells/: import_dateutil.ipynb  import_itkwidgets.ipynb  import_mpi4py.ipynb  import_mpi4py_numpy.ipynb  import_numpy_scipy.ipynb  import_plotly.ipynb
tests/data/replace_images_in_markdown/: html_and_markdown_images.ipynb  html_image.ipynb  image_and_code.ipynb  markdown_image.ipynb
tests/data/replace_images_in_markdown/images/: .gitignore
tests/data/replace_links_in_markdown/: html_link_double_quotes.ipynb  html_link_single_quotes.ipynb  link_and_code.ipynb  markdown_link.ipynb
tests/data/upload_file_to_google_drive/: existing_file.txt  new_file.txt
