[metadata]
name = Open in Cloud workflow
version = 0.0.dev1
author = Francesco Ballarin (and contributors)
email = francesco.ballarin@unicatt.it
maintainer = Francesco Ballarin
description = Open in Cloud workflow
url = https://github.com/fem-on-colab/open-in-colab-workflow
project_urls =
    Homepage = https://github.com/fem-on-colab/open-in-colab-workflow
    Issues = https://github.com/fem-on-colab/open-in-colab-workflow/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >= 3.7
setup_requires =
    setuptools >= 58
    wheel
install_requires =
    nbformat

[options.extras_require]
docs =
    sphinx
lint =
    flake8
    flake8-annotations
    flake8-docstrings
    flake8-import-restrictions
    flake8-isort
    flake8-quotes
    mypy
tests =
    coverage
    nbqa
    nbval
    pytest
    requests

[flake8]
max-line-length = 120
show-source = True
docstring-convention = numpy
inline-quotes = double
imr241_exclude = open_in_cloud_workflow, open_in_cloud_workflow.*
imr245_include = *
imr245_exclude = open_in_cloud_workflow, open_in_cloud_workflow.*
ignore = ANN101, W503
exclude = .eggs, build, dist
per-file-ignores =
    open_in_cloud_workflow/__init__.py: F401
    tests/data/**/*.py: D100, I004

[isort]
line_length = 120
multi_line_output = 4
order_by_type = False
combine_as_imports = True

[mypy]
check_untyped_defs = True
disallow_any_unimported = True
disallow_untyped_defs = True
exclude = (^\.eggs|^build|^dist|conftest\.py$)
no_implicit_optional = True
pretty = True
show_error_codes = True
strict = True
warn_return_any = True
warn_unused_ignores = True

[mypy-nbformat]
ignore_missing_imports = True

[mypy-requests]
ignore_missing_imports = True
